--- a/admin.shop.com/Application/Admin/View/Common/index.html
+++ b/admin.shop.com/Application/Admin/View/Common/index.html
@@ -25,9 +25,11 @@
     </form>
 </div>
 </block>
+<block name="list_operater">
 <input type="button" value=" 删除所选 " class="button ajax-post" url="{:U('changeStatus')}"/>
 <input type="button" value=" 显示所选 " class="button ajax-post" url="{:U('changeStatus',array('status'=>1))}"/>
 <input type="button" value=" 隐藏所选 " class="button ajax-post" url="{:U('changeStatus',array('status'=>0))}"/>
+</block>
 <block name="list"><!--子模板的列表的位置--></block>
 <div id="footer">
 共执行 3 个查询，用时 0.021251 秒，Gzip 已禁用，内存占用 2.194 MB<br />
