--- a/admin.shop.com/Application/Admin/View/Common/edit.html
+++ b/admin.shop.com/Application/Admin/View/Common/edit.html
@@ -7,6 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="__CSS__/general.css" rel="stylesheet" type="text/css" />
 <link href="__CSS__/main.css" rel="stylesheet" type="text/css" />
+<link href="__CSS__/common.css" rel="stylesheet" type="text/css" />
 <block name="css"><!--为子模板预留css位置--></block>
 </head>
 <body>
